--- a/src/admin/js/react/components/payment/style.scoped.scss
+++ b/src/admin/js/react/components/payment/style.scoped.scss
@@ -136,7 +136,7 @@
   margin-right: 5px;
   fill: var(--text-color-white);
 }
-.ncpi .pi-form-content.pi-form-style-two .pi-btn {
+.ncpi .pi-form-style-two .pi-btn {
   background: #e1e8ff;
   margin-top: 15px;
   border-radius: 5px;
