--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -31,7 +31,7 @@ h4.from-title {
 .ncpi .pi-popup-content {
     margin: 65px auto;
 }
-.ncpi .pi-form-content.pi-form-style-two label {
+.ncpi .pi-form-style-two label {
     z-index: 99;
 }
 .pi-inv {
