--- a/src/admin/scss/dashboard.scss
+++ b/src/admin/scss/dashboard.scss
@@ -23,6 +23,11 @@
     height: auto !important;
 }
 
+.pi-field-desc {
+    line-height: 1.4;
+    margin-top: 2px;
+}
+
 //TODO: temporary css
 h4.from-title {
     font-family: "Inter", sans-serif !important;
